--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 blinker==1.6.2
-certifi==2023.7.22
-charset-normalizer==3.2.0
+certifi==2022.12.7
+charset-normalizer==2.1.1
 click==8.1.6
 colorama==0.4.6
 contourpy==1.1.0
 cycler==0.11.0
 easyocr==1.7.0
-filelock==3.12.2
+filelock==3.9.0
 Flask==2.3.2
 Flask-SQLAlchemy==3.0.5
 fonttools==4.42.0
@@ -21,30 +21,30 @@ kiwisolver==1.4.4
 lazy_loader==0.3
 MarkupSafe==2.1.3
 matplotlib==3.7.2
-mpmath==1.3.0
-networkx==3.1
+mpmath==1.2.1
+networkx==3.0
 ninja==1.11.1
-numpy==1.25.2
+numpy==1.24.1
 opencv-python-headless==4.8.0.74
 packaging==23.1
-Pillow==9.5.0
+Pillow==9.3.0
 pyclipper==1.3.0.post4
 pyparsing==3.0.9
 python-bidi==0.4.2
 python-dateutil==2.8.2
 PyWavelets==1.4.1
 PyYAML==6.0.1
-requests==2.31.0
+requests==2.28.1
 scikit-image==0.21.0
 scipy==1.11.1
 shapely==2.0.1
 six==1.16.0
 SQLAlchemy==2.0.19
-sympy==1.12
+sympy==1.11.1
 tifffile==2023.7.18
-torch==2.0.1
+torch==2.0.1+cu117
 torchaudio==2.0.2+cu117
-torchvision==0.15.2
+torchvision==0.15.2+cu117
 typing_extensions==4.7.1
-urllib3==2.0.4
+urllib3==1.26.13
 Werkzeug==2.3.6
